--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
   <!-- Correct relative paths to stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> 
   <link href="static/styles.scss" rel="stylesheet">
-   <link href="/static/skeleton/normalize.css" rel="stylesheet">
-   <link href="/static/skeleton/skeleton.css" rel="stylesheet">
+
    
    
 
 
-  <title>ps70</title>
+  <title>gregsophia</title>
 
 </head>
 
@@ -38,17 +37,25 @@
 </nav>
 
 <style>
-      .me {
+
+.me {
       max-width: 30%;
       width: 100%;
       height: 675px;
       object-fit: cover;
-      display: block;
-      margin-bottom: 10px;
-      margin-top: 50px;
-	  margin-left: 600px;
 	  object-position: center top;
     }
+
+    @media (max-width:767px) {
+    .me {
+      max-width: 30%;
+      width: 100%;
+      height: 400px;
+      object-fit: cover;
+	  object-position: center top;
+    }
+  } 
+
 	@font-face {
   font-family: 'HarlowSolid';
   src: url('/static/font/HARLOWSI_1.TTF') format('truetype');
@@ -61,7 +68,8 @@ h3 {
 }
 </style>
 
-<img src="static/imgs/us2.jpg" alt="me" class="me" >
+
+
 
 <div class="container">
 
@@ -70,6 +78,8 @@ h3 {
   <!-- columns should be the immediate child of a .row -->
   <div class="row">
 	<div class="col-12 text-center">
+    <img src="static/imgs/us2.jpg" alt="me" class="me" >
+    <p></p>
 	  <h3>Greg & Sophia </h3>
 	</div>
 
