--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ h3 {
   <div class="row">
     <ul>
 		<div class="col-12 text-center">
-          <h5>Yes ladies and gents, we are tying them knots...and we can't wait to celebrate with you. </h5>
+          <h5>Ladies and gents, we are tying the knots...and we can't wait to celebrate with you! </h5>
           <p>
           </p>
           <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVP-02.png" alt="Brand Image"></a>
