--- a/index.html
+++ b/index.html
@@ -24,12 +24,19 @@
     <div class="container-fluid">
         <!-- Brand with image in a small box -->
         <div class="navbar-brand-box">
-            <a href="index.html"><img class="navbar-brand-img" src="static/imgs/logo4-01.png" alt="Brand Image"></a>
+            <a href="index.html"><img class="navbar-brand-img" src="static/imgs/logods-01.png" alt="Brand Image"></a>
         </div
 
         <!-- Navigation links directly in the navbar -->
         <ul class="navbar-nav ms-auto mt-2 d-flex flex-row">
+            <a href="index.html"><img class="navbar-brand-img" src="static/imgs/CALENDAR.png" alt="Brand Image"></a>
+        </ul>
+        <ul class="navbar-nav ms-auto mt-2 d-flex flex-row">
+            <a href="index.html"><img class="navbar-brand-img" src="static/imgs/DRESSCODE.png" alt="Brand Image"></a>
+        </ul>
 
+        <ul class="navbar-nav ms-auto mt-2 d-flex flex-row">
+            <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVPSMALL.png" alt="Brand Image"></a>
         </ul>
     </div>
 </nav>
@@ -72,7 +79,8 @@ h3 {
 <div class="container">
 
   
-
+    <p></p>
+    <p></p>
   <!-- columns should be the immediate child of a .row -->
   <div class="row">
 	<div class="col-12 text-center">
@@ -91,7 +99,7 @@ h3 {
           <h5>Ladies and gents, we are tying the knots...and we can't wait to celebrate with you! </h5>
           <p>
           </p>
-          <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVP-02.png" alt="Brand Image"></a>
+          <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVPSMALL.png" alt="Brand Image"></a>
       </div>
 
 
