--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
             <a href="index.html"><img class="navbar-brand-img" src="static/imgs/DRESSCODE.png" alt="Brand Image"></a>
         </ul>
 
-        <ul class="navbar-nav ms-auto mt-2 d-flex flex-row">
-            <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVPSMALL.png" alt="Brand Image"></a>
-        </ul>
     </div>
 </nav>
 
@@ -96,7 +93,7 @@ h3 {
   <div class="row">
     <ul>
 		<div class="col-12 text-center">
-          <h5>Ladies and gents, we are tying the knots...and we can't wait to celebrate with you! </h5>
+          <h5>We are tying the knots! </h5>
           <p>
           </p>
           <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVPSMALL.png" alt="Brand Image"></a>
