--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ h3 {
           <h5>We are tying the knots! </h5>
           <p>
           </p>
-          <a href="index.html"><img class="navbar-brand-img" src="static/imgs/RSVPSMALL.png" alt="Brand Image"></a>
+          <a href="https://docs.google.com/forms/d/e/1FAIpQLSe4uWh4wGj59jwDoC4U8Xo-SxB9zVvjliG1tZL00SSZlwiEGg/viewform?usp=sf_linkl"><img class="navbar-brand-img" src="static/imgs/RSVPSMALL.png" alt="Brand Image"></a>
       </div>
 
 
